--- a/workshops/index.html
+++ b/workshops/index.html
@@ -27,8 +27,9 @@ title: "Workshopformate"
 
                 <div class="format__statement text__white">
                      <p class="format__statement-elaboration">
-                       Argumente gegen Trolle - Teilnehmende verwandeln sich in diesem Workshop in digitale Abenteuer-Gruppen, welche bewaffnet mit Würfeln, Stiften und Papier sowie der helfenden Stimme des Dungeonmasters, Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trollwesen helfen aber weder Schwerter noch Zauber, dazu wollen Redefähigkeiten erlernt und richtig eingesetzt werden.
-                    </p>
+                       <b>Invasion der Cybertrolle</b> <br>
+                       Argumente gegen Trolle - Teilnehmende verwandeln sich in diesem Workshop in digitale Abenteuer-Gruppen, welche bewaffnet mit Würfeln, Stiften und Papier sowie der helfenden Stimme des Dungeonmasters, Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trollwesen helfen aber weder Schwerter noch Zauber, dazu wollen Redefähigkeiten erlernt und richtig eingesetzt werden. <br> <b>Thema:</b> Diskussionskultur im Netz
+
                 </div>
             </div>   
 
@@ -41,7 +42,9 @@ title: "Workshopformate"
 
                 <div class="format__statement text__white">
                     <p class="format__statement-elaboration">
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                        <b>Ziviler Ungehorsam</b> <br> 
+                        Gut und verrückt Demonstrieren - Teilnehmende erarbeiten eine fiktive Demonstration, an der man selbst mitwirken kann! Im Raum platzierte QR-Codes erzählen den Ablauf, in dem man oft entscheiden muss, wie man sich verhält. So erschließt man sich Stück für Stück verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration? <br><b>Thema:</b> Kreative Meinungsäußerung
+
                     </p>
                 </div>
             </div>   
@@ -55,7 +58,9 @@ title: "Workshopformate"
 
                 <div class="format__statement text__white">
                      <p class="format__statement-elaboration">
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                        <b>Game of Thoughts</b> <br>
+                        Der Edugame-Jam - In kurzer Zeit und ohne notwendige Vorkenntnisse erstellen die Teilnehmenden dieses Workshops ein digitales Spiel, welches eine Meinung zu einem für den Jam bestimmten Thema ausdrückt. Mit Hilfe dieser edukativen Spiele erlernt man so ein neues Medium für den eigenen Ausdruck. <br> <b>Thema: </b> Meinungsbildung
+
                     </p>
                 </div>
             </div> 
@@ -69,7 +74,8 @@ title: "Workshopformate"
 
                 <div class="format__statement text__white">
                     <p class="format__statement-elaboration">
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                        <b>Escape Populism</b> <br> Kann man Populismus entkommen? Im Escape Game werden die Teilnehmenden in einen Raum gesperrt, aus dem sie entkommen oder eine Aufgabe erfüllen müssen. Sie werden so zu Figuren eines real gewordenen Adventure Spiels und müssen sich im Team verständigen um knifflige, teils moralische Rätsel zu lösen! <br> <b>Thema: Populismus </b>
+
                     </p>
                 </div>
             </div>   
