--- a/team/index.html
+++ b/team/index.html
@@ -45,19 +45,6 @@ title: "Über uns"
                          <span class="speaker-name"><a class="text__blue" href="mailto:sebastian.seitz@okfn.de">Sebastian Seitz</a></span>Projektleiter <br> sebastian.seitz@okfn.de
                     </p>
                 </div>
-                <div class="members col-lg-4">
-                    <a href="mailto:maria.reimer@okfn.de"><img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg"></a>
-                    <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
-                    </p>
-                </div>    
-                <div class="members col-lg-4">
-                    <a href="mailto:paula.glaser@okfn.de"><img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg"></a>
-                    <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin <br> paula.glaser@okfn.de
-                    </p>
-                </div>    
-
 
                 <div class="members col-lg-4">
                     <a href="mailto:matthias.loewe@okfn.de"><img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg"></a>
@@ -83,6 +70,21 @@ title: "Über uns"
                 </div>
 
                 <div class="members col-lg-4">
+                    <a href="mailto:paula.glaser@okfn.de"><img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg"></a>
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin <br> paula.glaser@okfn.de
+                    </p>
+                </div>
+
+                <div class="members col-lg-4">
+                    <a href="mailto:maria.reimer@okfn.de"><img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg"></a>
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
+                    </p>
+                </div>    
+      
+
+                <div class="members col-lg-4">
                     <a href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Design Lead<br> nadine.stammen@okfn.de
@@ -93,7 +95,7 @@ title: "Über uns"
                 <div class="members col-lg-4">
                     <a href="mailto:leonard.wolf@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>studentischer Mitarbeiter <br> leonard.wolf@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter <br> leonard.wolf@okfn.de
                     </p>
                 </div>    
             </div> 
@@ -104,7 +106,7 @@ title: "Über uns"
     <div class="col-lg-12">
         <div class="container text__black">
             <div class="beneath-sections">
-            <h1>Datenkompetenz für NGOs</h1>
+            <h1>Datenkompetenz für Trägerorganisationen in der Jugendbildung</h1>
                 <div class="members col-lg-4">
                     <a href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/helene.jpg"></a>
                     <p>
