--- a/workshops/index.html
+++ b/workshops/index.html
@@ -27,7 +27,7 @@ title: "Workshopformate"
 
                 <div class="format__statement text__white">
                      <p class="format__statement-elaboration">
-                       <b>Lügen & Presse</b> <br>
+                       <b>Lügen &amp; Presse</b> <br>
                        Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versuchen Teilnehmende ihre Konkurrenz hinters Licht zu führen. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! <br>
                        <b>Themen: </b>Medienanalyse und Fake News</b>
 
@@ -46,7 +46,7 @@ title: "Workshopformate"
                     <p class="format__statement-elaboration">
                         <b>Invasion der Cybertrolle</b> <br> 
                         Argumente gegen Trolle - Teilnehmende verwandeln sich in diesem Workshop in digitale Abenteuer-Gruppen, welche bewaffnet mit Würfeln, Stiften und Papier sowie der helfenden Stimme des Dungeonmasters, Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trollwesen helfen aber weder Schwerter noch Zauber, dazu wollen Redefähigkeiten erlernt und richtig eingesetzt werden.<br>
-                        <b>Thema: </b>Diskussionskultur im Netz
+                        <b>Thema:</b>Diskussionskultur im Netz
                     </p>
                 </div>
             </div>   
