--- a/workshops/index.html
+++ b/workshops/index.html
@@ -28,7 +28,7 @@ title: "Workshopformate"
                 <div class="format__statement text__white">
                      <p class="format__statement-elaboration">
                        <b>Lügen &amp; Presse</b> <br>
-                       Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versuchen Teilnehmende ihre Konkurrenz hinters Licht zu führen. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! <br>
+                       Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versuchen Teilnehmende ihre Konkurrenz hinters Licht zu führen. Wer schafft es, alternative Fakten am glaubhaftesten zu verpacken, und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! <br>
                        <b>Themen: </b>Medienanalyse und Fake News</b>
 
 
