--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -71,7 +71,10 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                         <b>Schritt 1:</b> <br>
-                        Tretet mit uns in Kontakt und füllt dieses kurze [Formular] aus! Wir melden uns zeitnah bei Euch. 
+                        Tretet mit uns in über Mail
+
+                        <span class="speaker-name"><a class="text__blue" href="mailto:info@demokratielabore.de">über Mail</a> in Kontakt! Wir melden uns zeitnah bei Euch. 
+
                     </p>
                 </div>
             </div>
