--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -71,7 +71,7 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                         <b>Schritt 1:</b> <br>
-                        Tretet mit uns in <a class="text__blue text__white" href="mailto:info@demokratielabore.de">über Mail</a> in Kontakt! Wir melden uns zeitnah bei Euch. 
+                        Tretet mit uns in <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">über Mail</a></b> in Kontakt! Wir melden uns zeitnah bei Euch. 
 
                     </p>
                 </div>
