--- a/workshops/index.html
+++ b/workshops/index.html
@@ -12,7 +12,7 @@ title: "Workshopformate"
                 <!--<h1>Unsere Workshopformate</h1>-->
                
                 <p class="text">
-                    Gemeinsam mit außerschulischen Jugendeinrichtungen in ganz Deutschland führen wir fünf unterschiedliche Workshop- und Aktionsformate rund ums Thema Demokratie und Technologie durch. 
+                    Gemeinsam mit außerschulischen Jugendeinrichtungen in ganz Deutschland f&uuml;hren wir f&uuml;nf unterschiedliche Workshop- und Aktionsformate rund ums Thema Demokratie und Technologie durch. 
                 </p>
             </div>
         </div>
@@ -28,8 +28,8 @@ title: "Workshopformate"
                 <div class="format__statement text__white">
                      <p class="format__statement-elaboration">
                        <b>Lügen &amp; Presse</b> <br>
-                       Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versuchen Teilnehmende ihre Konkurrenz hinters Licht zu führen. Wer schafft es, alternative Fakten am glaubhaftesten zu verpacken, und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! <br>
-                       <b>Themen: </b>Medienanalyse und Fake News</b>
+                       Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versuchen Teilnehmende ihre Konkurrenz hinters Licht zu f&uuml;hren. Wer schafft es, alternative Fakten am glaubhaftesten zu verpacken, und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! <br>
+                       <b>Themen: </b> Medienanalyse und Fake News</b>
 
 
                 </div>
@@ -45,7 +45,7 @@ title: "Workshopformate"
                 <div class="format__statement text__white">
                     <p class="format__statement-elaboration">
                         <b>Invasion der Cybertrolle</b> <br> 
-                        Argumente gegen Trolle - Teilnehmende verwandeln sich in diesem Workshop in digitale Abenteuer-Gruppen, welche bewaffnet mit Würfeln, Stiften und Papier sowie der helfenden Stimme des Dungeonmasters, Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trollwesen helfen aber weder Schwerter noch Zauber, dazu wollen Redefähigkeiten erlernt und richtig eingesetzt werden.<br>
+                        Argumente gegen Trolle - Teilnehmende verwandeln sich in diesem Workshop in digitale Abenteuer-Gruppen, welche bewaffnet mit W&uuml;rfeln, Stiften und Papier sowie der helfenden Stimme des Dungeonmasters, Licht in die dunklen Gewölbe sozialer Plattformen bringen m&uuml;ssen. Gegen die dort lauernden Trollwesen helfen aber weder Schwerter noch Zauber, dazu wollen Redefähigkeiten erlernt und richtig eingesetzt werden.<br>
                         <b>Thema:</b>Diskussionskultur im Netz
                     </p>
                 </div>
@@ -61,7 +61,7 @@ title: "Workshopformate"
                 <div class="format__statement text__white">
                      <p class="format__statement-elaboration">
                         <b>Ziviler Ungehorsam</b> <br>
-                        Gut und verrückt Demonstrieren - Teilnehmende erarbeiten eine fiktive Demonstration, an der man selbst mitwirken kann! Im Raum platzierte QR-Codes erzählen den Ablauf, in dem man oft entscheiden muss, wie man sich verhält. So erschließt man sich Stück für Stück verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration?<br>
+                        Gut und verr&uuml;ckt Demonstrieren - Teilnehmende erarbeiten eine fiktive Demonstration, an der man selbst mitwirken kann! Im Raum platzierte QR-Codes erzählen den Ablauf, in dem man oft entscheiden muss, wie man sich verhält. So erschließt man sich St&uuml;ck f&uuml;r St&uuml;ck verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration?<br>
                         <b>Thema:</b> Kreative Meinungsäußerung
 
 
@@ -78,8 +78,7 @@ title: "Workshopformate"
 
                 <div class="format__statement text__white">
                     <p class="format__statement-elaboration">
-                        <b>Escape Populism</b> <br> Kann man Populismus entkommen? Im Escape Game werden die Teilnehmenden in einen Raum gesperrt, aus dem sie entkommen oder eine Aufgabe erfüllen müssen. Sie werden so zu Figuren eines real gewordenen Adventure Spiels und müssen sich im Team verständigen um knifflige, teils moralische Rätsel zu lösen! <br> <b>Thema: Populismus </b>
-
+                        <b>Escape Populism</b> <br> Kann man Populismus entkommen? Im Escape Game werden die Teilnehmenden in einen Raum gesperrt, aus dem sie entkommen oder eine Aufgabe erf&uuml;llen m&uuml;ssen. Sie werden so zu Figuren eines real gewordenen Adventure Spiels und m&uuml;ssen sich im Team verständigen um knifflige, teils moralische Rätsel zu lösen! <br> <b>Thema:</b> Populismus 
                     </p>
                 </div>
             </div>   
@@ -93,7 +92,7 @@ title: "Workshopformate"
 
                 <div class="format__statement text__white">
                      <p class="format__statement-elaboration">
-                        <b>Game of Thoughts</b> <br> Der Edugame-Jam - In kurzer Zeit und ohne notwendige Vorkenntnisse erstellen die Teilnehmenden dieses Workshops ein digitales Spiel, welches eine Meinung zu einem für den Jam bestimmten Thema ausdrückt. Mit Hilfe dieser edukativen Spiele erlernt man so ein neues Medium für den eigenen Ausdruck.<br>
+                        <b>Game of Thoughts</b> <br> Der Edugame-Jam - In kurzer Zeit und ohne notwendige Vorkenntnisse erstellen die Teilnehmenden dieses Workshops ein digitales Spiel, welches eine Meinung zu einem f&uuml;r den Jam bestimmten Thema ausdr&uuml;ckt. Mit Hilfe dieser edukativen Spiele erlernt man so ein neues Medium f&uuml;r den eigenen Ausdruck.<br>
                         <b>Thema: </b>Meinungsbildung
 
                     </p>
