--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@ title: Hello
                 10179 Berlin<br><br>
 
                 <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram, </a>
-                <a class="text__white" href="https://facebook.com/demokratielabs">Facebook </a>
+                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram</a>
             </p>
         </div>
     </div>
