--- a/team/index.html
+++ b/team/index.html
@@ -143,7 +143,7 @@ title: "Über uns"
                 10179 Berlin<br><br>
 
                 <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram, </a>
+                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram</a>
 
             </p>
         </div>
