--- a/workshops/index.html
+++ b/workshops/index.html
@@ -113,7 +113,7 @@ title: "Workshopformate"
                 10179 Berlin<br><br>
 
                 <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram, </a>
+                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram </a>
 
             </p>
         </div>
