--- a/info/index.html
+++ b/info/index.html
@@ -102,7 +102,7 @@ title: "Info"
                 10179 Berlin<br><br>
 
                 <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram, </a>
+                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram </a>
 
             </p>
         </div>
