--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -124,7 +124,7 @@ title: "Für Jugendeinrichtungen"
                 10179 Berlin<br><br>
 
                 <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram, </a>
+                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram </a>
             </p>
         </div>
     </div>
