--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Hello
                 <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>
                     <p> 
                         Du möchtest auf dem Laufenden bleiben? <br> 
-                        Dann melde Dich für unseren Newsletter an!
+                        Dann melde Dich f&uuml;r unseren Newsletter an!
                     </p>
 
                     <div class="mc-field-group form-group form-group-newsletter text-left">
