--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -12,12 +12,12 @@ title: "Für Jugendeinrichtungen"
             <div class="col-lg-12 title">
                 <!--<h1>Jugendeinrichtungen, macht mit!</h1>-->
                 <p>
-                   Mit den Demokratielaboren richten wir uns konkret an zwei Zielgruppen: Zum einen Jugendliche & junge Erwachsene zwischen 12 und 21 Jahren, die Neues ausprobieren wollen und zum anderen an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops bei sich umzusetzen.
+                   Mit den Demokratielaboren richten wir uns konkret an zwei Zielgruppen: Zum einen Jugendliche &amp; junge Erwachsene zwischen 12 und 21 Jahren, die Neues ausprobieren wollen und zum anderen an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops bei sich umzusetzen.
                 </p>   
             </div>
             <div class="col-lg-8 col-lg-offset-4">
                 <p>
-                      Während für die Jugendlichen die Inhalte der Angebote im Vordergrund stehen, möchten wir die kooperierenden Einrichtungen durch Qualifikationsmöglichkeiten in den Bereichen Digitalisierung und Technologie unterstützen. Im Fokus aller Aktivitäten steht der Gebrauch von digitalen Werkzeugen und Technologien zur Beteiligung an gesellschaftlichen Prozessen - egal ob international oder hyperlokal. Wichtig ist uns, eine möglichst hohe Diversität zu erreichen: Wir wollen mit Jugendeinrichtungen in ganz Deutschland zusammenarbeiten, egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel. Jede*r ist bei uns willkommen!
+                      Während f&uuml;r die Jugendlichen die Inhalte der Angebote im Vordergrund stehen, möchten wir die kooperierenden Einrichtungen durch Qualifikationsmöglichkeiten in den Bereichen Digitalisierung und Technologie unterst&uuml;tzen. Im Fokus aller Aktivitäten steht der Gebrauch von digitalen Werkzeugen und Technologien zur Beteiligung an gesellschaftlichen Prozessen - egal ob international oder hyperlokal. Wichtig ist uns, eine möglichst hohe Diversität zu erreichen: Wir wollen mit Jugendeinrichtungen in ganz Deutschland zusammenarbeiten, egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel. Jede*r ist bei uns willkommen!
                 </p>
             </div>
         </div>
@@ -71,7 +71,7 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                         <b>Schritt 1:</b> <br>
-                        Tretet mit uns in <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">über Mail</a></b> in Kontakt! Wir melden uns zeitnah bei Euch. 
+                        Tretet mit uns in <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">&uuml;ber Mail</a></b> in Kontakt! Wir melden uns zeitnah bei Euch. 
 
                     </p>
                 </div>
@@ -80,7 +80,7 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_purple_gradient join__statement text__white">
                     <p>
                         <b> Schritt 2:</b> <br>
-                        Gemeinsam wählen wir in persönlichen Gesprächen die [Workshop- und Aktionsformate] aus, die ihr in eurer Einrichtung bzw. eurem Verband anbieten möchtet. Im Anschluss vereinbaren wir  die Fortbildungs- und Durchführungstermine. 
+                        Gemeinsam wählen wir in persönlichen Gesprächen die [Workshop- und Aktionsformate] aus, die ihr in eurer Einrichtung bzw. eurem Verband anbieten möchtet. Im Anschluss vereinbaren wir  die Fortbildungs- und Durchf&uuml;hrungstermine. 
 
                      </p>
                 </div>
@@ -89,7 +89,7 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_blue_gradient join__statement text__white"> 
                     <p>
                         <b>Schritt 3: </b> <br>
-                        Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgewählten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchführung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchführung in eurer Einrichtung stehen wir euch deshalb gerne  zur Seite und können euch für weitere Durchläufe sowohl umfangreiche Materialien   als auch finanzielle Unterstützung. anbieten.         
+                        Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgewählten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne  zur Seite und können euch f&uuml;r weitere Durchläufe sowohl umfangreiche Materialien   als auch finanzielle Unterst&uuml;tzung. anbieten.         
                     </p>
                 </div>
             </div>
@@ -102,7 +102,7 @@ title: "Für Jugendeinrichtungen"
     <div class="container text__black">
         <div class="col-lg-8"> 
             <p>
-                Im weiteren Verlauf helfen wir euch (bei Interesse) dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten eine Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities geschehen. Auch hierfür stehen unterstützend finanzielle Mittel zur Verfügung.      
+                Im weiteren Verlauf helfen wir euch (bei Interesse) dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten eine Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities geschehen. Auch hierf&uuml;r stehen unterst&uuml;tzend finanzielle Mittel zur Verf&uuml;gung.      
             </p>
        </div>
     </div>
