--- a/team/index.html
+++ b/team/index.html
@@ -13,7 +13,7 @@ title: "Über uns"
             <div class="col-lg-11 title">
                 <!--<h1>Über uns</h1>-->
                 <p>
-                    Der <a href="https://okfn.de">Open Knowledge Foundation Deutschland e.V.</a> ist seit der Gründung 2011 ein Vorreiter und Impulsgeber im digitalen zivilgesellschaftlichen Engagement. Mit den Demokratielaboren haben wir ein Projekt ins Leben gerufen, dass an der Grundidee des preisgekrönten OKF-Förderprogramms Jugend hackt ansetzt: Jugendliche verschiedener Gesellschaftsgruppen zum Einsatz ihrer technischen Fähigkeiten f&uuml;r die Demokratie begeistern!
+                    Die <a href="https://okfn.de">Open Knowledge Foundation Deutschland</a> ist seit der Gründung 2011 ein Vorreiter und Impulsgeber im digitalen zivilgesellschaftlichen Engagement. Mit den Demokratielaboren haben wir ein Projekt ins Leben gerufen, dass an der Grundidee des preisgekrönten OKF-Förderprogramms Jugend hackt ansetzt: Jugendliche verschiedener Gesellschaftsgruppen zum Einsatz ihrer technischen Fähigkeiten f&uuml;r die Demokratie begeistern!
 
                 </p>
             </div>
