some more updates

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -5,7 +5,7 @@ title: "Info"
 ---
 
 <!-- Info -->
-<div class="beneath-sections jumbotron fond__white">
+<div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
         <div class="row">
             <div class="col-lg-12 title">
@@ -44,15 +44,15 @@ title: "Info"
 
  <div class="beneath-sections jumbotron fond__white">
     <div class="container text__black">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div class="col-lg-12">
             <h2>Unsere Formate</h2>
         </div>
-        <div class="col-lg-7 col-lg-offset-2">
+        <div class="col-lg-12">
             <p> Wir haben drei verschiedene Formate entwickelt, um die Nachhaltigkeit unseres Vorhabens zu garantieren.
             </p>
         </div>
         <div class="col-lg-12">
-            <div class="col-lg-8 col-lg-offset-3">
+            <div class="col-lg-12">
                 <div class="fond_green_gradient join__statement text__white">
                     <p>
                         <b>Workshops</b> <br>
@@ -66,7 +66,7 @@ title: "Info"
                     </p>
                 </div>
             </div>
-            <div class="col-lg-8"> 
+            <div class="col-lg-12">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                         <b> Demokratie-AGs</b> <br>
@@ -77,7 +77,7 @@ title: "Info"
                      </p>
                 </div>
             </div>
-            <div class="col-lg-8 col-lg-offset-4"> 
+            <div class="col-lg-12">
                 <div class="fond_purple_gradient join__statement text__white">
                     <p>
                         <b> WebTV-Format</b> <br>
@@ -91,20 +91,28 @@ title: "Info"
     </div>
  </div>
 
-<div class="beneath-sections jumbotron fond_green_gradient">
+<div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
-        <div class="col-lg-12 title">
-            <h2>Fragen?</h1>
+        <div class="row goals">
+            <h2 class="text-center">Evaluation</h2>
+            <div class="col-lg-12">
                 <p>
-                info@demokratielabore.de<br>
-                +49 (0)30 577 036 660<br>
-                Singerstraße 109<br>
-                10179 Berlin<br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, aut deserunt eos est laudantium modi nihil nobis nostrum reiciendis voluptates!
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
-                <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram </a>
-
-            </p>
+<div class="beneath-sections jumbotron">
+    <div class="container">
+        <div class="row goals">
+            <h2 class="text-center">Leitbild</h2>
+            <ul>
+                <li>Punkt 1</li>
+                <li>Punkt 2</li>
+                <li>Punkt 3</li>
+            </ul>
         </div>
     </div>
 </div>
