--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ layout: default
 sponsor: yes
 title: Hello
 ---
-
-<div class="hero-container fond_green_gradient">
+<div class="hero-container fond_green_gradient margin-top-huge">
    <a href="/info">
       <div class="hero-pattern hero-pattern__drl">
         <div class="hero-pattern-wrap hero-start">
@@ -27,78 +26,76 @@ title: Hello
     </div>
 </div>
 
-<div class="beneath-sections jumbotron fond_darkblue_gradient">
-    <div class="container text__white">
-        <div class="row goals">
-            <h2 class="text-center">Wir wollen...</h2>
-            <div class="col-lg-4">
-                <p>
-                    ...das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.
-                </p>
+<!--<div class="beneath-sections jumbotron fond_darkblue_gradient">-->
+    <!--<div class="container text__white">-->
+        <!--<div class="row goals">-->
+            <!--<h2 class="text-center">Wir wollen...</h2>-->
+            <!--<div class="col-lg-4">-->
+                <!--<p>-->
+                    <!--...das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.-->
+                <!--</p>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4">-->
+                <!--<p>-->
+                  <!--...digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.-->
+                <!--</p>-->
+            <!--</div>-->
+            <!--<div class="col-lg-4">-->
+               <!--<p>                    -->
+                    <!--...die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger-->
+                    <!--Menschen bereichern.-->
+                <!--</p>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+<div class="parallax"></div>
+<div class="beneath-sections jumbotron fond__white">
+    <div class="container text__black">
+        <div class="row">
+            <div class="col-lg-12 title">
+                <h1><u>Neues aus unserem Blog</u></h1>
             </div>
-            <div class="col-lg-4">
-                <p>
-                  ...digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.
-                </p>
+        </div>
+        <div class="row">
+            {% for post in site.posts limit:3 %}
+            {% assign url=post.url |replace_first:'/','' %}
+            <div class="col-md-4">
+                {% include post-teaser.html post=post %}
             </div>
-            <div class="col-lg-4">
-               <p>                    
-                    ...die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger
-                    Menschen bereichern.
-                </p>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
+<!--<div class="beneath-sections jumbotron fond__grey-bright">-->
+    <!--<div class="container text__black title">-->
+        <!--<div class="col-lg-10  text-left">-->
+            <!--<div id="mc_embed_signup">-->
+                <!--<form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>-->
+                    <!--<p> -->
+                        <!--Du möchtest auf dem Laufenden bleiben? <br> -->
+                        <!--Dann melde Dich f&uuml;r unseren Newsletter an!-->
+                    <!--</p>-->
 
-<div class="beneath-sections jumbotron fond__grey-bright">
-    <div class="container text__black title">
-        <div class="col-lg-10  text-left">
-            <div id="mc_embed_signup">
-                <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>
-                    <p> 
-                        Du möchtest auf dem Laufenden bleiben? <br> 
-                        Dann melde Dich f&uuml;r unseren Newsletter an!
-                    </p>
+                    <!--<div class="mc-field-group form-group form-group-newsletter text-left">-->
+                        <!--<div class="col-lg-5">-->
+                            <!--<label for="mce-EMAIL" class="sr-only" >E-Mail</label>-->
+                            <!--<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required >-->
+                        <!--</div>-->
 
-                    <div class="mc-field-group form-group form-group-newsletter text-left">
-                        <div class="col-lg-5">
-                            <label for="mce-EMAIL" class="sr-only" >E-Mail</label>
-                            <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required >
-                        </div>
+                        <!--<div class="col-lg-3">-->
+                            <!--<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-mitmachen">Abonnieren!-->
+                            <!--</button>-->
 
-                        <div class="col-lg-3">
-                            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-mitmachen">Abonnieren!
-                            </button>
-
-                            <div style="position: absolute; left: -5000px;"><input type="text" name="b_929f1e07936386d34833e20d1_6c6b5db59f" value="">
-                                                     <!-- set to newsletter only-->
-                            <input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
-                        </div>
-                    </div>
-                </form>    
-            </div>
-        </div>
-    </div>
-</div>
+                            <!--<div style="position: absolute; left: -5000px;"><input type="text" name="b_929f1e07936386d34833e20d1_6c6b5db59f" value="">-->
+                                                     <!--&lt;!&ndash; set to newsletter only&ndash;&gt;-->
+                            <!--<input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</form>    -->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 </div></div>
-
-
-
-<div class="beneath-sections jumbotron fond_green_gradient">
-    <div class="container text__white">
-        <div class="col-lg-12 title">
-            <h2>Fragen?  </h1>
-                <p>
-                info@demokratielabore.de<br>
-                +49 (0)30 577 036 660<br>
-                Singerstraße 109<br>
-                10179 Berlin<br><br>
-
-                <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram</a>
-            </p>
-        </div>
-    </div>
-</div>
 
