--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -6,7 +6,7 @@ title: "Für Jugendeinrichtungen"
 
 <!-- About -->
 
-<div class="beneath-sections jumbotron fond__white">
+<div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
         <div class="row">
             <div class="col-lg-12 title">
@@ -108,26 +108,5 @@ title: "Für Jugendeinrichtungen"
     </div>
  </div>
 
-
-
-
-
-
-<div class="beneath-sections jumbotron fond_green_gradient">
-    <div class="container text__white">
-        <div class="col-lg-12 title">
-            <h2>Fragen?</h1>
-                <p>
-                info@demokratielabore.de<br>
-                +49 (0)30 577 036 660<br>
-                Singerstraße 109<br>
-                10179 Berlin<br><br>
-
-                <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram </a>
-            </p>
-        </div>
-    </div>
-</div>
 
 </div>
