--- a/team/index.html
+++ b/team/index.html
@@ -7,7 +7,7 @@ title: "Über uns"
 <!-- Über uns -->
 
 
-<div class="beneath-sections jumbotron fond__white">
+<div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
         <div class="row">
             <div class="col-lg-11 title">
@@ -97,7 +97,25 @@ title: "Über uns"
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter <br> leonard.wolf@okfn.de
                     </p>
-                </div>    
+                </div>
+                <div class="members col-lg-4">
+                    <a href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Modul Bedarfsanalyse - Konzeption<br> moritz.neujeffski@okfn.de
+                    </p>
+                </div>
+                <div class="members col-lg-4">
+                    <a href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Helene Hahn" src="/img/avatars/helene.jpg"></a>
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Modul Bedarfsanalyse - Leitung<br> helene.hahn@okfn.de
+                    </p>
+                </div>
+                <div class="members col-lg-4">
+                    <a href="mailto:knut.perseke@okfn.de"><img class="img-circle member-avatar" alt="Knut Perseke" src="/img/avatars/knut.jpg"></a>
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:knut.perseke@okfn.de">Knut Perseke</a> </span>Modul Bedarfsanalyse - Tech Lead<br> knut.perseke@okfn.de
+                    </p>
+                </div>
             </div> 
         </div>             
     </div>
@@ -131,24 +149,6 @@ title: "Über uns"
     </div>
 </div>
 -->
-
-<div class="beneath-sections jumbotron fond_green_gradient">
-    <div class="container text__white">
-        <div class="col-lg-12 title">
-            <h2>Fragen?</h1>
-                <p>
-                info@demokratielabore.de<br>
-                +49 (0)30 577 036 660<br>
-                Singerstraße 109<br>
-                10179 Berlin<br><br>
-
-                <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
-                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram</a>
-
-            </p>
-        </div>
-    </div>
-</div>
 
 
 
