--- a/projekt/index.html
+++ b/projekt/index.html
@@ -11,7 +11,9 @@ title: "Info"
             <div class="col-lg-12 title">
                 <!--<h1>Die Demokratielabore</h1>-->
                 <p>
-                    Die Demokratielabore sind ein mehrstufiges, modulares Modellprojekt, das einer breiten Zielgruppe von Jugendlichen im Alter von  12 bis 21 Jahren Selbstwirksamkeitserfahrungen im Bereich von Demokratie und Technologie ermöglichen will.
+                    Die Demokratielabore sind ein Modellprojekt der Open Knowledge Foundation Deutschland, das vom Bundesministerium für Familie, Senioren, Frauen und Jugend im Rahmen des Bundesprogramms “Demokratie leben!” gefördert wird. 
+                    
+                    Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch überregionalen Bildungsverbänden und Initiativen zusammen - deutschlandweit. Mehr erfahren!
                 </p>   
             </div>
         </div>
@@ -24,18 +26,17 @@ title: "Info"
             <h2 class="text-center">Wir wollen...</h2>
             <div class="col-lg-4">
                 <p>
-                    ...das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.
+                    ...  Räume schaffen, in denen sich Jugendliche ausprobieren können, und sie dazu ermutigen, sich mit Hilfe von digitalen Kompetenzen, Werkzeugen & Technologien selbstbestimmt und aktiv an gesellschaftlichen Prozessen zu beteiligen.
                 </p>
             </div>
             <div class="col-lg-4">
                 <p>
-                  ...digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.
+                  ... in Zeiten von Fake News, Hate Speech und Populismus das Internet für und mit jungen Menschen als positiven Gestaltungsraum zurückerobern und die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven Jugendlicher bereichern.
                 </p>
             </div>
             <div class="col-lg-4">
                <p>                    
-                    ...die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger
-                    Menschen bereichern.
+                  ... Mitarbeiter*innen in Jugendeinrichtungen ermöglichen, neue Zugänge zu aktuellen Themen kennenzulernen und sie dazu befähigen, unsere Formate jederzeit eigenständig und unkompliziert durchführen zu können.
                 </p>
             </div>
         </div>
@@ -48,7 +49,7 @@ title: "Info"
             <h2>Unsere Formate</h2>
         </div>
         <div class="col-lg-12">
-            <p> Wir haben drei verschiedene Formate entwickelt, um die Nachhaltigkeit unseres Vorhabens zu garantieren.
+            <p> Für die Umsetzung unseres Vorhabens haben wir verschiedene Angebote für Jugendliche und Jugendeinrichtungen entwickelt. Dazu zählen unterschiedliche Workshops, die nach einer Schulung mit Hilfe unseres Train-the-Trainers-Konzeptes direkt an pädagogische Fachkräfte und engagierte Jugendliche weitergegeben werden. Wir möchten auch das Communitybuilding fördern und bieten Hilfe bei der Entstehung von Demokratie-AGs in Jugendeinrichtungen an. In unserem WebTV-Channel gibt es außerdem regelmäßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten können. Überregionalen Bildungsverbänden und Initiativen bieten wir die Möglichkeit bei einem Workshop zum Thema Daten und Digitalisierung Tipps, Tricks und Tools für ihre eigenen digitalen Projekte kennenzulernen. Mehr erfahren!
             </p>
         </div>
         <div class="col-lg-12">
@@ -97,7 +98,7 @@ title: "Info"
             <h2 class="text-center">Evaluation</h2>
             <div class="col-lg-12">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, aut deserunt eos est laudantium modi nihil nobis nostrum reiciendis voluptates!
+                    Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das Forschungsinstitut Nexus aus Berlin, das uns sowohl bei der Konzeption unserer Formate berät, als auch einige Workshop-Durchführungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz veröffentlicht. 
                 </p>
             </div>
         </div>
@@ -109,9 +110,9 @@ title: "Info"
         <div class="row goals">
             <h2 class="text-center">Leitbild</h2>
             <ul>
-                <li>Punkt 1</li>
-                <li>Punkt 2</li>
-                <li>Punkt 3</li>
+                <li>Die Richtlinien des Beutelsbacher Konsens sind maßgeblich und richtungsweisend in unserer Jugendbildungsarbeit.</li>
+                <li>Wir veröffentlichen alle Inhalte des Projekts, soweit dies möglich ist, unter freier Lizenz als Open Educational Resources.</li>
+                <li>Wir arbeiten überparteilich und unabhängig.</li>
             </ul>
         </div>
     </div>
