--- a/angebote/index.html
+++ b/angebote/index.html
@@ -42,7 +42,7 @@ title: "Angebote"
                     <div class="format__statement text__white">
                         <p class="format__statement-elaboration">
                             <b>Lügen & Presse</b> 
-                            <br> Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versucht ihr eure Konkurrenz hinters Licht zu führen. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! <br>
+                            <br> Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versucht ihr eure Konkurrenz hinters Licht zu führen. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! </br>
                             <b>Themen: </b> Medienanalyse und Fake News</b>
                             <b>Prinzip: </b> Simulationsspiel/Gruppenspiel</b>
                             <b>Dauer: </b> 2-4 Stunden</b>
@@ -58,7 +58,7 @@ title: "Angebote"
                     <div class="format__statement text__white">
                         <p class="format__statement-elaboration">
                             <b>Invasion der Cybertrolle</b> <br>
-                            Argumente gegen Trolle - ihr  verwandelt euch in diesem Workshop in digitale Abenteuer-Gruppen, die bewaffnet mit Smartphone und Tablet sowie der helfenden Stimme des Dungeon-Masters (Spielleiters), Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trolle helfen aber weder Schwerter noch Zauber, sondern nur gute Argumente und Redegeschick!<br>
+                            Argumente gegen Trolle - ihr  verwandelt euch in diesem Workshop in digitale Abenteuer-Gruppen, die bewaffnet mit Smartphone und Tablet sowie der helfenden Stimme des Dungeon-Masters (Spielleiters), Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trolle helfen aber weder Schwerter noch Zauber, sondern nur gute Argumente und Redegeschick!</br>
                             <b>Thema:</b> Diskussionskultur im Netz</b>
                             <b>Prinzip: </b> Digitales Pen&Paper-Rollenspiel</b>
                             <b>Dauer: </b> 2-8 Stunden</b>
