--- a/angebote/index.html
+++ b/angebote/index.html
@@ -75,7 +75,7 @@ title: "Angebote"
                     <!--<div class="format__statement text__white">-->
                         <!--<p class="format__statement-elaboration">-->
                             <!--<b>Ungehörsam</b> <br>-->
-                            <!--Gut und verrückt demonstrieren - Ihr erarbeitet die Geschichte einer fiktiven Demonstration, die je nach Entscheidung der Teilnehmenden unterschiedliche Ausgänge nehmen kann! Im (Außen-)Raum platzierte QR-Codes erzählen den Ablauf, in dem ihr entscheiden müsst, wie man sich verhält. So erschließt ihr euch Stück für Stück verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration?<br>-->
+                            <!--Gut und verrückt demonstrieren - Ihr erarbeitet die Geschichte einer fiktiven Demonstration, die je nach Entscheidung der Teilnehmenden unterschiedliche Ausgänge nehmen kann! Im (Außen-)Raum platzierte QR-Codes erzählen den Ablauf, in dem ihr entscheiden müsst, wie man sich verhält. So erschließt ihr euch Stück für Stück verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration?</br>-->
                             <!--<b>Thema:</b> Kreative Meinungsäußerung-->
                             <!--<b>Prinzip: </b> Digitales Spielbuch</b>-->
                             <!--<b>Dauer: </b> 4 Stunden bis 2 Tage</b>-->
@@ -93,7 +93,7 @@ title: "Angebote"
                     <!--<div class="format__statement text__white">-->
                         <!--<p class="format__statement-elaboration">-->
                             <!--<b>Escape Populism</b>--> 
-                            <!--<br> Kann man Populismus entkommen? Im Escape Game werdet ihr in einen Raum gesperrt, aus dem ihr entkommen oder eine Aufgabe erfüllen müsst. So werdet ihr zu Figuren eines real gewordenen Adventure Spiels und müsst euch im Team verständigen, um knifflige Rätsel zu lösen, die euch auch moralisch auf die Probe stellen!<br>--> 
+                            <!--<br> Kann man Populismus entkommen? Im Escape Game werdet ihr in einen Raum gesperrt, aus dem ihr entkommen oder eine Aufgabe erfüllen müsst. So werdet ihr zu Figuren eines real gewordenen Adventure Spiels und müsst euch im Team verständigen, um knifflige Rätsel zu lösen, die euch auch moralisch auf die Probe stellen!</br>--> 
                             <!--<b>Thema:</b> Populismus-->
                             <!--<b>Prinzip: </b> Escape Game</b>-->
                             <!--<b>Dauer: </b> 2-4 Stunden</b>--> 
@@ -111,7 +111,7 @@ title: "Angebote"
                     <!--<div class="format__statement text__white">-->
                         <!--<p class="format__statement-elaboration">-->
                             <!--<b>Game of Thoughts</b>--> 
-                            <!--<br> Kleine Spiele selbst gemacht - In kurzer Zeit und ohne Vorkenntnisse verwandelt ihr das, was euch gerade umtreibt und die  Frage “Was müsste man daran mal ändern?” in digitale Spiele! In diesem Workshop erlernt ihr so nicht nur die Grundlagen des Gamedesigns, sondern auch eure Meinungen interaktiv erfahrbar zu machen.<br>-->
+                            <!--<br> Kleine Spiele selbst gemacht - In kurzer Zeit und ohne Vorkenntnisse verwandelt ihr das, was euch gerade umtreibt und die  Frage “Was müsste man daran mal ändern?” in digitale Spiele! In diesem Workshop erlernt ihr so nicht nur die Grundlagen des Gamedesigns, sondern auch eure Meinungen interaktiv erfahrbar zu machen.</br>-->
                             <!--<b>Thema: </b>Meinungsbildung-->
                             <!--<b>Prinzip: </b>Game Jam</b>-->
                             <!--<b>Dauer: </b> 4 Stunden bis 3 Tage</b>-->
