--- a/angebote/index.html
+++ b/angebote/index.html
@@ -122,6 +122,7 @@ title: "Angebote"
             </div>
         </div>
     </div>
+</div>
 
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
