--- a/angebote/index.html
+++ b/angebote/index.html
@@ -16,6 +16,8 @@ title: "Angebote"
                 </p>
             </div>
         </div>
+    </div>
+</div>
         
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
