--- a/angebote/index.html
+++ b/angebote/index.html
@@ -22,6 +22,9 @@ title: "Angebote"
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
         <div class="row">
+            <p class="text">
+                    Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an überregionale Bildungsverbände und Träger von Jugendbildungsstätten. 
+                </p>
             <div class="col-lg-12 title">
                 <h1>Für Jugendliche & Jugendeinrichtungen</h1>
                
