--- a/angebote/index.html
+++ b/angebote/index.html
@@ -18,9 +18,10 @@ title: "Angebote"
         </div>
     </div>-->
 
-        
-<div class="beneath-sections jumbotron fond__white margin-top-huge">
+<div class="beneath-sections jumbotron fond__white">
     <div class="container text__black">
+<!--<div class="beneath-sections jumbotron fond__white margin-top-huge">
+    <div class="container text__black">-->
         <div class="row">
             <p class="text">
                     Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an überregionale Bildungsverbände und Träger von Jugendbildungsstätten. 
