--- a/angebote/index.html
+++ b/angebote/index.html
@@ -143,7 +143,7 @@ title: "Angebote"
     </div>
  </div>
 
- <div class="beneath-sections jumbotron fond__white margin-top-huge">
+ <div class="beneath-sections jumbotron fond__white">
     <div class="container text__black">
         <div class="row">
             <div class="col-lg-12 title">
@@ -154,4 +154,5 @@ title: "Angebote"
                 </p>
             </div>
         </div>
+     </div>
 </div>
