--- a/team/index.html
+++ b/team/index.html
@@ -49,14 +49,14 @@ title: "Über uns"
                 <div class="members col-lg-4">
                     <a href="mailto:matthias.loewe@okfn.de"><img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue" href="mailto:matthias.loewe@okfn.de">Matthias Löwe</a></span>Projektmanager <br> matthias.loewe@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:matthias.loewe@okfn.de">Matthias Löwe</a></span>Projektmanager Workshops<br> matthias.loewe@okfn.de
                     </p>
                 </div>
 
                 <div class="members col-lg-4">
                     <a href="mailto:saadya.windauer@okfn.de"><img class="img-circle member-avatar" alt="Saadya Windauer" src="/img/avatars/saadya.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue" href="mailto:saadya.windauer@okfn.de">Saadya Windauer</a> </span>Projektmanagerin <br> saadya.windauer@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:saadya.windauer@okfn.de">Saadya Windauer</a> </span>Projektmanagerin Kooperationen<br> saadya.windauer@okfn.de
                     </p>
                 </div>
             </div>
@@ -65,14 +65,14 @@ title: "Über uns"
                 <div class="members col-lg-4">
                     <a href="mailto:jasmin.helm@okfn.de"><img class="img-circle member-avatar" alt="Jasmin Helm" src="/img/avatars/jasmin.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> </span>Projektmanagerin <br> jasmin.helm@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> </span>Projektmanagerin Kommunikation<br> jasmin.helm@okfn.de
                     </p>
                 </div>
 
                 <div class="members col-lg-4">
                     <a href="mailto:paula.glaser@okfn.de"><img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin <br> paula.glaser@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin Finanzen<br> paula.glaser@okfn.de
                     </p>
                 </div>
 
@@ -95,25 +95,25 @@ title: "Über uns"
                 <div class="members col-lg-4">
                     <a href="mailto:leonard.wolf@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter <br> leonard.wolf@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter Kommunikation<br> leonard.wolf@okfn.de
                     </p>
                 </div>
                 <div class="members col-lg-4">
                     <a href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Modul Bedarfsanalyse - Konzeption<br> moritz.neujeffski@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Modulmanagement Bedarfsanalyse<br> moritz.neujeffski@okfn.de
                     </p>
                 </div>
                 <div class="members col-lg-4">
                     <a href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Helene Hahn" src="/img/avatars/helene.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Modul Bedarfsanalyse - Leitung<br> helene.hahn@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Modulleitung Bedarfsanalyse<br> helene.hahn@okfn.de
                     </p>
                 </div>
                 <div class="members col-lg-4">
                     <a href="mailto:knut.perseke@okfn.de"><img class="img-circle member-avatar" alt="Knut Perseke" src="/img/avatars/knut.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:knut.perseke@okfn.de">Knut Perseke</a> </span>Modul Bedarfsanalyse - Tech Lead<br> knut.perseke@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:knut.perseke@okfn.de">Knut Perseke</a> </span>Tech Lead<br> knut.perseke@okfn.de
                     </p>
                 </div>
             </div> 
