--- a/team/index.html
+++ b/team/index.html
@@ -95,7 +95,7 @@ title: "Über uns"
                 <div class="members col-lg-4">
                     <a href="mailto:leonard.wolf@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter Kommunikation<br> leonard.wolf@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter<br> leonard.wolf@okfn.de
                     </p>
                 </div>
                 <div class="members col-lg-4">
