--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -10,15 +10,14 @@ title: "Für Jugendeinrichtungen"
     <div class="container text__black">
         <div class="row">
             <div class="col-lg-12 title">
-                <!--<h1>Jugendeinrichtungen, macht mit!</h1>-->
+                <h1>Wer kann bei den Demokratielaboren mitmachen?</h1>
                 <p>
-                   Mit den Demokratielaboren richten wir uns konkret an zwei Zielgruppen: Zum einen Jugendliche &amp; junge Erwachsene zwischen 12 und 21 Jahren, die Neues ausprobieren wollen und zum anderen an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops bei sich umzusetzen.
+                   Mit den Demokratielaboren richten wir uns zum einen an Jugendliche zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr über Aktivismus und gesellschaftliche Teilhabe lernen wollen. Wie?
+                   Zum anderen richten wir uns an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können. Wie?
+                   Auch als Träger von Jugendeinrichtungen, Bildungsverband oder NGO kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. Wie?
+                </br>
+                   Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen & Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: Jede*r ist bei uns willkommen!
                 </p>   
-            </div>
-            <div class="col-lg-8 col-lg-offset-4">
-                <p>
-                      Während f&uuml;r die Jugendlichen die Inhalte der Angebote im Vordergrund stehen, möchten wir die kooperierenden Einrichtungen durch Qualifikationsmöglichkeiten in den Bereichen Digitalisierung und Technologie unterst&uuml;tzen. Im Fokus aller Aktivitäten steht der Gebrauch von digitalen Werkzeugen und Technologien zur Beteiligung an gesellschaftlichen Prozessen - egal ob international oder hyperlokal. Wichtig ist uns, eine möglichst hohe Diversität zu erreichen: Wir wollen mit Jugendeinrichtungen in ganz Deutschland zusammenarbeiten, egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel. Jede*r ist bei uns willkommen!
-                </p>
             </div>
         </div>
     </div>
