--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -24,6 +24,19 @@ title: "Für Jugendeinrichtungen"
     </div>
 </div>
 
+<div class="beneath-sections jumbotron fond_darkblue_gradient">
+    <div class="container text__white">
+        <div class="row">
+            <div class="col-lg-12 title">
+                <h2>Wie kann man als Jugendliche*r oder Interessierte*r bei den Demokratielaboren mitmachen?</h2>
+               <p class="text">
+                    Du hast Lust, an einem unserer Workshops oder Aktionen teilzunehmen? Toll! Dann wirf am besten als erstes einen Blick auf unsere Termine, denn dort kannst du sehen, ob wir bald in deiner Nähe sind. Falls nicht, schreib uns gerne eine Mail und wir schauen, ob wir z.B. in deinem Jugendclub etwas organisieren können.
+               </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- A
 <div class="beneath-sections jumbotron fond__grey-bright">
     <div class="container text__black">
