--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -28,7 +28,7 @@ title: "Für Jugendeinrichtungen"
     <div class="container text__white">
         <div class="row">
             <div class="col-lg-12 title">
-                <h2>Wie kann man als Jugendliche*r oder Interessierte*r bei den Demokratielaboren mitmachen?</h2>
+                <h2>Wie kann man als <strong>Jugendliche*r</strong> bei den Demokratielaboren mitmachen?</h2>
                <p class="text">
                     Du hast Lust, an einem unserer Workshops oder Aktionen teilzunehmen? Toll! Dann wirf am besten als erstes einen Blick auf unsere Termine, denn dort kannst du sehen, ob wir bald in deiner Nähe sind. Falls nicht, schreib uns gerne eine Mail und wir schauen, ob wir z.B. in deinem Jugendclub etwas organisieren können.
                </p>
